--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "nesbot/carbon": "^2.36"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
