--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
-        "nesbot/carbon": "^2.36"
+        "nesbot/carbon": "^2.36",
+        "spatie/laravel-image-optimizer": "^1.6"
     },
     "require-dev": {
         "facade/ignition": "^1.4",
