--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,8 @@
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.36",
+        "predis/predis": "^1.1",
+        "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-image-optimizer": "^1.6"
     },
     "require-dev": {
