--- a/package.json
+++ b/package.json
@@ -17,5 +17,9 @@
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
         "sass-loader": "^7.1.0"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.8.1",
+        "socket.io-client": "^2.3.0"
     }
 }
