--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "darryldecode/cart": "^4.1",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
+        "fruitcake/laravel-cors": "^2.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.36",
