--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dependencies": {
         "laravel-echo": "^1.8.1",
         "node-sass": "^4.14.1",
-        "socket.io-client": "^2.3.0"
+        "socket.io-client": "^2.3.0",
+        "toastr": "^2.1.4"
     }
 }
