--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "dependencies": {
         "laravel-echo": "^1.8.1",
         "node-sass": "^4.14.1",
-        "socket.io-client": "^2.3.0",
+        "pusher-js": "^7.0.0",
         "toastr": "^2.1.4"
     }
 }
