--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,13 @@
         "php": "^7.2",
         "barryvdh/laravel-dompdf": "^0.8.6",
         "beyondcode/laravel-websockets": "^1.6",
-        "darryldecode/cart": "^4.1",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "fruitcake/laravel-cors": "^2.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
         "nesbot/carbon": "^2.36",
+        "olimortimer/laravelshoppingcart": "^4.0",
         "predis/predis": "^1.1",
         "pusher/pusher-php-server": "^4.1",
         "spatie/laravel-image-optimizer": "^1.6"
