--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.19",
-        "bootstrap": "^4.0.0",
+        "bootstrap": "^4.5.3",
         "cross-env": "^5.1",
         "jquery": "^3.2",
         "laravel-mix": "^4.0.7",
@@ -19,10 +19,12 @@
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
         "sass-loader": "^7.1.0",
-        "vue": "^2.5.17",
+        "vue": "^2.6.12",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "@alfsnd/vue-bootstrap-select": "^0.4.4",
+        "bootstrap-vue": "^2.20.1",
         "laravel-echo": "^1.8.1",
         "node-sass": "^4.14.1",
         "pusher-js": "^7.0.0",
