--- a/.htaccess
+++ b/.htaccess
@@ -18,6 +18,15 @@
     RewriteCond %{REQUEST_FILENAME} !-d
     RewriteCond %{REQUEST_FILENAME} !-f
     RewriteRule ^ index.php [L]
+
+    # CORS EXEPTIONS
+    Header always set Access-Control-Allow-Origin "http://127.0.0.1:8000"
+    Header always set Access-Control-Allow-Methods "POST, GET, OPTIONS, DELETE, PUT"
+    Header always set Access-Control-Max-Age "1000"
+    Header always set Access-Control-Allow-Headers "x-requested-with, Content-Type, origin, authorization, accept, client-security-token"
+
+    RewriteEngine On
+    RewriteCond %{REQUEST_METHOD} OPTIONS
 </IfModule>
 
 php_value max_execution_time 300
